tests/lean/crash.lean.expected.out
crash.lean:8:12: error: type mismatch at application
  have H' : ¬P, from H,
  ?M_1 P H H'
term
  H
has type
  P
but is expected to have type
  ¬P
